[risk=low][no ticket] Renamed a few methods to clarify their purpose (#9208)